# Minicraft

./: .gitignore  CMakeLists.txt  IDEAS.md  LICENSE  README.md  TODO.md  minicraft.h  minicraft_entities.cpp  minicraft_entities.h  minicraft_entity.cpp  minicraft_input.cpp  minicraft_main.cpp  minicraft_player.cpp  minicraft_rendering.cpp  minicraft_storage.cpp  minicraft_texture.cpp  minicraft_time.cpp  minicraft_world.cpp
glad-master/include/glad/: glad.h
scripts/: bone.cpp  bone.h  enemy.cpp  enemy.h  player.cpp  player.h  skeleton.cpp  skeleton.h  zombie.cpp  zombie.h
